--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -66,7 +66,7 @@
  *
  * @route  /account
  */
-.account-index #middle-column {
+.account-overview #middle-column {
     .buttons-right {
         float: right;
 
