Improved first-letter

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -1,5 +1,15 @@
 @import 'config';
 
+@font-face {
+  font-family: 'MartelDescent';
+  src: url('@{font-path}/MartelDescent/marteldescent.eot');
+  src: url('@{font-path}/MartelDescent/marteldescent.eot?#iefix') format('embedded-opentype'),
+       url('@{font-path}/MartelDescent/marteldescent.woff2') format('woff2'),
+       url('@{font-path}/MartelDescent/marteldescent.woff') format('woff'),
+       url('@{font-path}/MartelDescent/marteldescent.ttf') format('truetype'),
+       url('@{font-path}/MartelDescent/marteldescent.svg#svgFontName') format('svg');
+}
+
 @import 'tibia/tibia';
 
 @import 'routes/about';
