--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -5,6 +5,65 @@
  * @route  /
  */
 .news-latest #middle-column {
+    .ticker {
+        & > .inner-box-border > .inner-box {
+            table td,
+            table th {
+                border: none !important;
+                line-height: 14px;
+                font-size: 12px;
+                padding: 1px;
+            }
+
+            .icon {
+                background: no-repeat center center;
+                display: block;
+                height: 16px;
+                width: 16px;
+
+                &.community { background-image: url('@{image-path}/newsicon_community_small.gif'); }
+                &.development { background-image: url('@{image-path}/newsicon_development_small.gif'); }
+                &.staff { background-image: url('@{image-path}/newsicon_cipsoft_small.gif'); }
+                &.support { background-image: url('@{image-path}/newsicon_support_small.gif'); }
+                &.technical { background-image: url('@{image-path}/newsicon_technical_small.gif'); }
+            }
+
+            time {
+                font-size: 9.3px;
+                margin-top: 2px;
+                display: block;
+
+                &:after {
+                    margin-left: 7px;
+                    content: '\002D';
+                }
+            }
+        }
+    }
+
+    .featured {
+        & > .inner-box-border > .inner-box {
+            .clearfix;
+
+            table td,
+            table th {
+                padding: 0;
+            }
+
+            p,
+            a {
+                margin: 0 7px 0 5px;
+                line-height: 14px;
+                font-size: 12px;
+
+                & > strong {
+                    margin-bottom: 4px;
+                    display: block;
+                }
+            }
+        }
+    }
+
 	.news {
 		.inner-box {
 			padding: 10px;
