More news & layout improvements
- Toggleable news ticker items
- Minor adjustments to the featured article
- Menu is now open per default when JS is disabled

--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -50,14 +50,22 @@
                 padding: 0;
             }
 
-            p,
-            a {
+            p {
                 margin: 0 7px 0 5px;
                 line-height: 14px;
                 font-size: 12px;
 
                 & > strong {
                     margin-bottom: 4px;
+                    display: block;
+                }
+            }
+
+            .featured-image {
+                margin-left: 10px;
+                display: block;
+
+                & > img {
                     display: block;
                 }
             }
