--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -251,7 +251,6 @@
             display: inline-block;
             margin: 10px 25px 0 0;
             font-size: 9.3px;
-            height: 28px;
             color: #fff;
             float: left;
 
@@ -266,7 +265,6 @@
             font-size: 13.3px;
             font-weight: bold;
             margin: 7px 0 0 0;
-            height: 28px;
             color: #fff;
             float: left;
 
@@ -287,6 +285,23 @@
         p.first-letter {
             margin: 0 0 15px !important;
         }
+    }
+}
+
+.plusminus {
+    background: url('@{image-path}/plus.gif') no-repeat center center;
+    margin: 2px 2px 0 0;
+    cursor: pointer;
+    display: block;
+    outline: none;
+    border: none;
+    height: 12px;
+    width: 12px;
+
+    .pull-right;
+
+    &.active {
+        background-image: url('@{image-path}/minus.gif');
     }
 }
 
