--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -13,6 +13,18 @@
                 line-height: 14px;
                 font-size: 12px;
                 padding: 1px;
+
+                &.icon-wrapper {
+                    width: 20px;
+                }
+
+                &.time-wrapper {
+                    width: 82px;
+                }
+
+                &.content-wrapper {
+                    padding-top: 3px;
+                }
             }
 
             .icon {
