--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -45,6 +45,18 @@
 
 .valign {
     vertical-align: middle;
+
+    &.top {
+        vertical-align: top;
+    }
+
+    &.bottom {
+        vertical-align: bottom;
+    }
+
+    &.baseline {
+        vertical-align: baseline;
+    }
 }
 
 .martel {
