--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -90,3 +90,21 @@
 		}
 	}
 }
+
+/**
+ * The following styles were written with the subsequent route in mind,
+ * although are not necessarily limited to it.
+ *
+ * @route  /
+ */
+.news-archive #middle-column {
+    label {
+        margin: 2px 0;
+    }
+
+    .blue-button{
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
+    }
+}
