Replaced button images with actual text

--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -98,6 +98,10 @@
  * @route  /
  */
 .news-archive #middle-column {
+    .table-striped > tbody > tr > th {
+        width: 33.3%;
+    }
+
     label {
         margin: 2px 0;
     }
