--- a/resources/less/config.less
+++ b/resources/less/config.less
@@ -33,21 +33,36 @@
 
 
 @font-face {
-  font-family: 'Martel';
-  src: url('@{font-path}/Martel/martel.eot');
-  src: url('@{font-path}/Martel/martel.eot?#iefix') format('embedded-opentype'),
-       url('@{font-path}/Martel/martel.woff2') format('woff2'),
-       url('@{font-path}/Martel/martel.woff') format('woff'),
-       url('@{font-path}/Martel/martel.ttf') format('truetype'),
-       url('@{font-path}/Martel/martel.svg#martel') format('svg');
+    font-family: 'Martel';
+    src: url('@{font-path}/Martel/martel.eot');
+    src: url('@{font-path}/Martel/martel.eot?#iefix') format('embedded-opentype'),
+         url('@{font-path}/Martel/martel.woff2') format('woff2'),
+         url('@{font-path}/Martel/martel.woff') format('woff'),
+         url('@{font-path}/Martel/martel.ttf') format('truetype'),
+         url('@{font-path}/Martel/martel.svg#martel') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: 'MartelDescent';
-  src: url('@{font-path}/MartelDescent/marteldescent.eot');
-  src: url('@{font-path}/MartelDescent/marteldescent.eot?#iefix') format('embedded-opentype'),
-       url('@{font-path}/MartelDescent/marteldescent.woff2') format('woff2'),
-       url('@{font-path}/MartelDescent/marteldescent.woff') format('woff'),
-       url('@{font-path}/MartelDescent/marteldescent.ttf') format('truetype'),
-       url('@{font-path}/MartelDescent/marteldescent.svg#marteldescent') format('svg');
+    font-family: 'MartelDescent';
+    src: url('@{font-path}/MartelDescent/marteldescent.eot');
+    src: url('@{font-path}/MartelDescent/marteldescent.eot?#iefix') format('embedded-opentype'),
+         url('@{font-path}/MartelDescent/marteldescent.woff2') format('woff2'),
+         url('@{font-path}/MartelDescent/marteldescent.woff') format('woff'),
+         url('@{font-path}/MartelDescent/marteldescent.ttf') format('truetype'),
+         url('@{font-path}/MartelDescent/marteldescent.svg#marteldescent') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'RobotoLight';
+    src: url('@{font-path}/RobotoLight/robotolight.eot');
+    src: url('@{font-path}/RobotoLight/robotolight.eot?#iefix') format('embedded-opentype'),
+         url('@{font-path}/RobotoLight/robotolight.woff') format('woff'),
+         url('@{font-path}/RobotoLight/robotolight.ttf') format('truetype'),
+         url('@{font-path}/RobotoLight/robotolight.svg#robotolight') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
