--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -371,9 +371,25 @@
     &:hover {
         background-position-y: -25px;
 
-        img {
-            margin: 1px 0 0 1px;
+        & > img {
+            margin-left: 1px;
+            margin-top: 1px;
         }
+
+        & > span {
+            margin-left: 2px;
+            margin-top: 1px;
+        }
+    }
+
+    & > span {
+        text-shadow: 0 0 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        font-family: 'RobotoLight', sans-serif;
+        display: inline-block;
+        letter-spacing: 0.5px;
+        font-weight: 200;
+        font-size: 12px;
+        color: #f1d4a5;
     }
 
     &.bottom {
