PX to EM conversion for font-size/line-height

--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -11,11 +11,12 @@
 
 	.monster {
 		margin-left: 5px;
-		font-size: 12px;
 		margin-top: 5px;
 		height: 100px;
 		width: 100px;
 		float: left;
+
+		.font-size(1.2);
 
 		.title {
 			text-align: center;
@@ -105,14 +106,15 @@
 
 		.title {
 			font-weight: bold;
-			font-size: 13.3px;
+
+			.font-size(1.33);
 		}
 
 		li {
-			font-size: 13.3px;
 			margin-left: 10px;
-			line-height: 17px;
 			list-style: none;
+
+			.font-size(1.33, 1.7);
 		}
 	}
 }
