--- a/resources/less/tibia/elements.less
+++ b/resources/less/tibia/elements.less
@@ -1,5 +1,6 @@
 html {
     min-width: 1000px;
+    font-size: 62.5%;
 }
 
 body {
@@ -7,7 +8,6 @@ body {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
     color: @heading-color;
     overflow-y: scroll;
-    font-size: 12px;
     margin: 0;
 }
 
@@ -29,8 +29,9 @@ h1 {
     color: @heading-color;
     text-align: center;
     font-weight: bold;
-    font-size: 24px;
     margin: 16px 0;
+
+    .font-size(2.4);
 }
 
 h2 {
@@ -38,7 +39,8 @@ h2 {
     margin: -6px 0 28px;
     text-align: center;
     font-weight: bold;
-    font-size: 17px;
+
+    .font-size(1.7);
 
     &.iconless {
         margin: 0 0 5px;
@@ -68,9 +70,10 @@ h3 {
 }
 
 h4 {
-    font-size: 18.6px;
     font-weight: bold;
     margin: 0;
+
+    .font-size(1.86);
 }
 
 label {
