--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -15,7 +15,8 @@
 
     .information {
         padding-bottom: 4px;
-        font-size: 16px;
+        
+        .font-size(1.6);
 
         .buttons-right {
             margin-top: 19px;
