--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -10,9 +10,9 @@
             table td,
             table th {
                 border: none !important;
-                line-height: 14px;
-                font-size: 12px;
                 padding: 1px;
+
+                .font-size(1.2, 1.4);
 
                 &.icon-wrapper {
                     width: 20px;
@@ -41,9 +41,10 @@
             }
 
             time {
-                font-size: 9.3px;
                 margin-top: 2px;
                 display: block;
+
+                .font-size(0.93);
 
                 &:after {
                     margin-left: 7px;
@@ -57,15 +58,19 @@
         & > .inner-box-border > .inner-box {
             .clearfix;
 
-            table td,
-            table th {
-                padding: 0;
+            table {
+                border-spacing: 0;
+
+                td,
+                th {
+                    padding: 0;
+                }
             }
 
             p {
                 margin: 0 7px 0 5px;
-                line-height: 14px;
-                font-size: 12px;
+
+                .font-size(1.2, 1.4);
 
                 & > strong {
                     margin-bottom: 4px;
@@ -81,12 +86,16 @@
                     display: block;
                 }
             }
+
+            .readmore {
+                .font-size(1.2);
+            }
         }
     }
 
 	.news {
 		.inner-box {
-			padding: 10px;
+			padding: 10px !important;
 		}
 	}
 }
