--- a/resources/less/tibia/layout/layout.less
+++ b/resources/less/tibia/layout/layout.less
@@ -1,7 +1,3 @@
-@import 'left-column';
-@import 'middle-column';
-@import 'right-column';
-
 #skeleton {
     margin: 156px auto 20px;
     max-width: 1200px;
@@ -14,19 +10,29 @@
         display: block;
 
         &#left-column {
+            position: relative;
             margin: 0 15px;
             width: 180px;
             float: left;
+
+            @import 'left-column';
         }
 
         &#middle-column {
+            position: relative;
+            padding-top: 4px;
             margin: 0 210px;
+
+            @import 'middle-column';
         }
 
         &#right-column {
+            position: relative;
             margin: 0 15px;
             width: 180px;
             float: right;
+
+            @import 'right-column';
         }
     }
 }
