--- a/resources/less/tibia/layout/left-column.less
+++ b/resources/less/tibia/layout/left-column.less
@@ -1,269 +1,265 @@
-#left-column {
-    position: relative;
+#logo-artwork {
+    background: url('@{image-path}/tibia-logo-artwork-top.gif');
+    position: absolute;
+    display: block;
+    height: 158px;
+    width: 196px;
+    top: -153px;
+    left: -10px;
+    z-index: 5;
+}
 
-    #logo-artwork {
-        background: url('@{image-path}/tibia-logo-artwork-top.gif');
+.box {
+    margin: 0 8px 10px;
+    position: relative;
+    padding: 12px 0;
+    width: 164px;
+
+    &:before {
+        background: url('@{image-path}/box-top.gif');
         position: absolute;
-        display: block;
-        height: 158px;
-        width: 196px;
-        top: -153px;
-        left: -10px;
-        z-index: 5;
+        height: 12px;
+        width: 180px;
+        content: '';
+        left: -8px;
+        z-index: 4;
+        top: 0;
     }
 
-    .box {
-        margin: 0 8px 10px;
+    &:after {
+        background: url('@{image-path}/box-bottom.gif');
+        position: absolute;
+        height: 12px;
+        width: 180px;
+        content: '';
+        right: -8px;
+        z-index: 4;
+        bottom: 0;
+    }
+
+    .inner-box {
+        background: url('@{image-path}/loginbox-textfield-background.gif') repeat top left;
+        display: inline-block;
         position: relative;
-        padding: 12px 0;
-        width: 164px;
+        margin: 0 0 0 1px;
+        width: 162px;
 
         &:before {
-            background: url('@{image-path}/box-top.gif');
+            background: url('@{image-path}/chain.gif') repeat;
             position: absolute;
-            height: 12px;
-            width: 180px;
             content: '';
-            left: -8px;
-            z-index: 4;
-            top: 0;
-        }
-
-        &:after {
-            background: url('@{image-path}/box-bottom.gif');
-            position: absolute;
-            height: 12px;
-            width: 180px;
-            content: '';
-            right: -8px;
-            z-index: 4;
+            z-index: 2;
+            width: 7px;
+            left: -4px;
+            top: -4px;
             bottom: 0;
         }
 
-        .inner-box {
-            background: url('@{image-path}/loginbox-textfield-background.gif') repeat top left;
-            display: inline-block;
-            position: relative;
-            margin: 0 0 0 1px;
-            width: 162px;
-
-            &:before {
-                background: url('@{image-path}/chain.gif') repeat;
-                position: absolute;
-                content: '';
-                z-index: 2;
-                width: 7px;
-                left: -4px;
-                top: -4px;
-                bottom: 0;
-            }
-
-            &:after {
-                background: url('@{image-path}/chain.gif') repeat;
-                position: absolute;
-                content: '';
-                z-index: 2;
-                right: -4px;
-                width: 7px;
-                top: -4px;
-                bottom: 0;
-            }
+        &:after {
+            background: url('@{image-path}/chain.gif') repeat;
+            position: absolute;
+            content: '';
+            z-index: 2;
+            right: -4px;
+            width: 7px;
+            top: -4px;
+            bottom: 0;
         }
     }
+}
 
-    .box#login-box {
-        .medium-button {
-            margin: 1px auto 0;
-        }
-
-        .create-account {
-            background: url('@{image-path}/loginbox-font-create-account.gif') no-repeat top left;
-            margin: 2px auto 1px;
-            display: block;
-            height: 11px;
-            width: 124px;
-
-            &:hover {
-                background-position-y: -11px;
-            }
-        }
-
-        .logout {
-            background: url('@{image-path}/loginbox-font-logout.gif') no-repeat top left;
-            margin: 2px auto 1px;
-            display: block;
-            height: 11px;
-            width: 124px;
-
-            &:hover {
-                background-position-y: -11px;
-            }
-        }
+.box#login-box {
+    .medium-button {
+        margin: 1px auto 0;
     }
 
-    .box#navigation .inner-box {
-        background: @navigation-bgcolor;
-        color: @navigation-color;
-        list-style: none;
+    .create-account {
+        background: url('@{image-path}/loginbox-font-create-account.gif') no-repeat top left;
+        margin: 2px auto 1px;
         display: block;
+        height: 11px;
+        width: 124px;
+
+        &:hover {
+            background-position-y: -11px;
+        }
+    }
+
+    .logout {
+        background: url('@{image-path}/loginbox-font-logout.gif') no-repeat top left;
+        margin: 2px auto 1px;
+        display: block;
+        height: 11px;
+        width: 124px;
+
+        &:hover {
+            background-position-y: -11px;
+        }
+    }
+}
+
+.box#navigation .inner-box {
+    background: @navigation-bgcolor;
+    color: @navigation-color;
+    list-style: none;
+    display: block;
+    padding: 0;
+
+    .navigation-item {
+        margin: 0 0 0 -1px;
         padding: 0;
 
-        .navigation-item {
-            margin: 0 0 0 -1px;
-            padding: 0;
-
-            &.open {
-                .navigation-content {
-                    display: block;
+        &.open {
+            .navigation-content {
+                display: block;
+            }
+            
+            .navigation-button .crystals {
+                &.top:before, &.top:after {
+                    content: none;
                 }
-                
-                .navigation-button .crystals {
-                    &.top:before, &.top:after {
+                &.bottom {
+                    &:before {
                         content: none;
                     }
-                    &.bottom {
-                        &:before {
-                            content: none;
-                        }
 
-                        &:after {
-                            background: url('@{image-path}/minus.gif');
-                        }
+                    &:after {
+                        background: url('@{image-path}/minus.gif');
                     }
                 }
             }
+        }
 
-            .navigation-button {
-                background: url('@{image-path}/button-background.gif') no-repeat top left;
-                position: relative;
-                cursor: pointer;
-                margin: 0 -3px;
-                outline: none;
-                border: none;
-                height: 32px;
-                width: 170px;
-                padding: 0;
-                z-index: 3;
+        .navigation-button {
+            background: url('@{image-path}/button-background.gif') no-repeat top left;
+            position: relative;
+            cursor: pointer;
+            margin: 0 -3px;
+            outline: none;
+            border: none;
+            height: 32px;
+            width: 170px;
+            padding: 0;
+            z-index: 3;
 
-                .no-selection;
-                .clearfix;
+            .no-selection;
+            .clearfix;
 
-                &:hover {
-                    background-position-y: -32px;
-                }
+            &:hover {
+                background-position-y: -32px;
+            }
 
-                .icon {
-                    margin-left: 8px;
-                    display: block;
-                    float: left;
-                }
+            .icon {
+                margin-left: 8px;
+                display: block;
+                float: left;
+            }
 
-                .label {
-                    margin-left: 2px;
-                    margin-top: 6px;
-                    display: block;
-                    float: left;
-                }
+            .label {
+                margin-left: 2px;
+                margin-top: 6px;
+                display: block;
+                float: left;
+            }
 
-                .crystals {
-                    position: absolute;
-                    display: block;
-                    height: 100%;
-                    width: 100%;
+            .crystals {
+                position: absolute;
+                display: block;
+                height: 100%;
+                width: 100%;
 
-                    &.top {
-                        &:before {
-                            background: url('@{image-path}/green-light.gif');
-                            position: absolute;
-                            content: '';
-                            height: 2px;
-                            width: 2px;
-                            left: 3px;
-                            top: 2px;
-                        }
-
-                        &:after {
-                            background: url('@{image-path}/green-light.gif');
-                            position: absolute;
-                            content: '';
-                            height: 2px;
-                            width: 2px;
-                            right: 3px;
-                            top: 2px;
-                        }
+                &.top {
+                    &:before {
+                        background: url('@{image-path}/green-light.gif');
+                        position: absolute;
+                        content: '';
+                        height: 2px;
+                        width: 2px;
+                        left: 3px;
+                        top: 2px;
                     }
 
-                    &.bottom {
-                        &:before {
-                            background: url('@{image-path}/green-light.gif');
-                            position: absolute;
-                            bottom: 2px;
-                            content: '';
-                            height: 2px;
-                            width: 2px;
-                            left: 3px;
-                        }
+                    &:after {
+                        background: url('@{image-path}/green-light.gif');
+                        position: absolute;
+                        content: '';
+                        height: 2px;
+                        width: 2px;
+                        right: 3px;
+                        top: 2px;
+                    }
+                }
 
-                        &:after {
-                            background: url('@{image-path}/plus.gif');
-                            position: absolute;
-                            height: 12px;
-                            width: 12px;
-                            right: -2px;
-                            content: '';
-                            bottom: 0;
-                        }
+                &.bottom {
+                    &:before {
+                        background: url('@{image-path}/green-light.gif');
+                        position: absolute;
+                        bottom: 2px;
+                        content: '';
+                        height: 2px;
+                        width: 2px;
+                        left: 3px;
+                    }
+
+                    &:after {
+                        background: url('@{image-path}/plus.gif');
+                        position: absolute;
+                        height: 12px;
+                        width: 12px;
+                        right: -2px;
+                        content: '';
+                        bottom: 0;
                     }
                 }
             }
+        }
 
-            .navigation-content {
-                display: none;
+        .navigation-content {
+            display: none;
+            padding: 0;
+            margin: 0;
+
+            & > ul {
+                list-style: none;
                 padding: 0;
                 margin: 0;
 
-                & > ul {
-                    list-style: none;
+                & > li {
                     padding: 0;
                     margin: 0;
 
-                    & > li {
-                        padding: 0;
-                        margin: 0;
+                    &.active {
+                        position: relative;
 
-                        &.active {
-                            position: relative;
-
-                            &:before {
-                                content: url('@{image-path}/icon-activesubmenu.gif');
-                                position: absolute;
-                                height: 10px;
-                                width: 10px;
-                                left: 5px;
-                                top: 2px;
-                            }
-
-                            & > a {
-                                color: @navigation-link-color;
-                            }
+                        &:before {
+                            content: url('@{image-path}/icon-activesubmenu.gif');
+                            position: absolute;
+                            height: 10px;
+                            width: 10px;
+                            left: 5px;
+                            top: 5px;
                         }
 
                         & > a {
-                            border-bottom: 1px solid #4b7874;
-                            font-family: Arial, sans-serif;
-                            color: @subnavigation-color;
-                            padding: 2px 0 2px 17px;
-                            text-decoration: none;
-                            font-weight: bold;
-                            line-height: 16px;
-                            font-size: 13.3px;
-                            display: block;
-                            width: 145px;
+                            color: @navigation-link-color;
+                        }
+                    }
 
-                            &:hover {
-                                background-color: @subnavigation-bgcolor;
-                                color: @subnavigation-hover;
-                            }
+                    & > a {
+                        border-bottom: 1px solid #4b7874;
+                        font-family: Arial, sans-serif;
+                        color: @subnavigation-color;
+                        padding: 2px 0 2px 17px;
+                        text-decoration: none;
+                        font-weight: bold;
+                        display: block;
+                        width: 145px;
+
+                        .font-size(1.33, 1.6);
+
+                        &:hover {
+                            background-color: @subnavigation-bgcolor;
+                            color: @subnavigation-hover;
                         }
                     }
                 }
