--- a/resources/less/tibia/layout/right-column.less
+++ b/resources/less/tibia/layout/right-column.less
@@ -1,156 +1,152 @@
-#right-column {
-    position: relative;
+#pedestal {
+    background: url('@{image-path}/pedestal-and-online.gif');
+    position: absolute;
+    display: block;
+    height: 107px;
+    width: 153px;
+    top: -102px;
+    left: 14px;
+    z-index: 3;
 
-    #pedestal {
-        background: url('@{image-path}/pedestal-and-online.gif');
+    .monster {
         position: absolute;
-        display: block;
-        height: 107px;
-        width: 153px;
-        top: -102px;
-        left: 14px;
-        z-index: 3;
-
-        .monster {
-            position: absolute;
-            cursor: pointer;
-            height: 80px;
-            width: 80px;
-            top: -32px;
-            left: 17px;
-            z-index: 4;
-        }
-
-        .online {
-            font-family: Verdana, Arial, Times New Roman, sans-serif;
-            text-decoration: none;
-            font-weight: normal;
-            text-align: center;
-            position: absolute;
-            line-height: 8pt;
-            cursor: pointer;
-            color: #cfa600;
-            display: block;
-            font-size: 7pt;
-            bottom: 13px;
-            width: 100%;
-        }
+        cursor: pointer;
+        height: 80px;
+        width: 80px;
+        top: -32px;
+        left: 17px;
+        z-index: 4;
     }
 
-    .box {
-        position: relative;
-        padding: 12px 0 12px;
-        margin: 0 8px 10px;
+    .online {
+        font-family: Verdana, Arial, Times New Roman, sans-serif;
+        text-decoration: none;
+        font-weight: normal;
+        text-align: center;
+        position: absolute;
+        cursor: pointer;
+        color: #cfa600;
         display: block;
-        width: 164px;
+        bottom: 13px;
+        width: 100%;
+
+        .font-size(0.9, 1);
+    }
+}
+
+.box {
+    padding: 12px 0 12px;
+    position: relative;
+    margin: 0 8px 10px;
+    display: block;
+    width: 164px;
+
+    &:before {
+        background: url('@{image-path}/box-top.gif');
+        position: absolute;
+        height: 12px;
+        width: 180px;
+        content: '';
+        left: -8px;
+        z-index: 2;
+        top: 0;
+    }
+
+    &:after {
+        background: url('@{image-path}/box-bottom.gif');
+        position: absolute;
+        height: 12px;
+        width: 180px;
+        right: -8px;
+        content: '';
+        z-index: 2;
+        bottom: 0;
+    }
+
+    &.premium {
+        background: url('@{image-path}/premiumbox.gif') no-repeat top left;
+        display: inline-block;
+        text-align: center;
+        padding: 0 0 12px;
+        margin: 0 0 10px;
+        height: 152px;
+        width: 180px;
 
         &:before {
-            background: url('@{image-path}/box-top.gif');
-            position: absolute;
-            height: 12px;
-            width: 180px;
-            content: '';
-            left: -8px;
-            z-index: 2;
-            top: 0;
+            content: none;
         }
 
         &:after {
-            background: url('@{image-path}/box-bottom.gif');
-            position: absolute;
-            height: 12px;
-            width: 180px;
-            right: -8px;
-            content: '';
-            z-index: 2;
-            bottom: 0;
-        }
-
-        &.premium {
-            background: url('@{image-path}/premiumbox.gif') no-repeat top left;
-            display: inline-block;
-            text-align: center;
-            padding: 0 0 12px;
-            margin: 0 0 10px;
-            height: 152px;
-            width: 180px;
-
-            &:before {
-                content: none;
-            }
-
-            &:after {
-                right: 0;
-            }
-
-            .inner-box {
-                margin: 35px 9px 5px;
-                background: none;
-                border-width: 0;
-
-                .green-button {
-                    margin: 79px auto 0;
-
-                    img {
-                        display: inline-block;
-                    }
-                }
-            }
-        }
-
-        &.networks {
-            background: url('@{image-path}/networksbox.png') no-repeat top left;
-            display: inline-block;
-            padding: 0 0 12px;
-            margin: 0 0 10px;
-            height: 192px;
-            width: 180px;
-
-            &:before {
-                content: none;
-            }
-
-            &:after {
-                right: 0;
-            }
-
-            .inner-box {
-                margin: 35px 9px 5px;
-                background: none;
-                border-width: 0;
-            }
-        }
-
-        &.screenshots {
-            padding-top: 31px;
-
-            &:before {
-                background: url('@{image-path}/screenshotbox.gif');
-                height: 31px;
-                left: -8px;
-                top: 0;
-            }
-
-            .inner-box {
-                display: block;
-                width: 162px;
-                padding: 0;
-            }
+            right: 0;
         }
 
         .inner-box {
-            background: url('@{image-path}/scroll.gif') repeat top left;
-            border-image: url('@{image-path}/frame.png') 5 4 fill;
-            display: inline-block;
-            border-width: 5px 4px;
-            border-style: solid;
-            margin-left: -3px;
-            padding: 5px;
-            width: 152px;
+            margin: 35px 9px 5px;
+            background: none;
+            border-width: 0;
 
-            img {
-                .img-responsive;
+            .green-button {
+                margin: 79px auto 0;
+
+                img {
+                    display: inline-block;
+                }
             }
+        }
+    }
+
+    &.networks {
+        background: url('@{image-path}/networksbox.png') no-repeat top left;
+        display: inline-block;
+        padding: 0 0 12px;
+        margin: 0 0 10px;
+        height: 192px;
+        width: 180px;
+
+        &:before {
+            content: none;
+        }
+
+        &:after {
+            right: 0;
+        }
+
+        .inner-box {
+            margin: 35px 9px 5px;
+            background: none;
+            border-width: 0;
+        }
+    }
+
+    &.screenshots {
+        padding-top: 31px;
+
+        &:before {
+            background: url('@{image-path}/screenshotbox.gif');
+            height: 31px;
+            left: -8px;
+            top: 0;
+        }
+
+        .inner-box {
+            display: block;
+            width: 162px;
+            padding: 0;
+        }
+    }
+
+    .inner-box {
+        background: url('@{image-path}/scroll.gif') repeat top left;
+        border-image: url('@{image-path}/frame.png') 5 4 fill;
+        display: inline-block;
+        border-width: 5px 4px;
+        border-style: solid;
+        margin-left: -3px;
+        padding: 5px;
+        width: 152px;
+
+        img {
+            .img-responsive;
         }
     }
 }
