--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -334,7 +334,7 @@
     .pull-right;
 
     &.active {
-        background-position-y: -12px;
+        background-position: 0 -12px;
     }
 }
 
@@ -352,7 +352,7 @@
     padding: 0;
 
     &:hover {
-        background-position-y: -37px;
+        background-position: 0 -37px;
     }
 }
 
@@ -373,7 +373,7 @@
     margin: 0;
 
     &:hover {
-        background-position-y: -25px;
+        background-position: 0 -25px;
 
         & > img {
             margin-left: 1px;
@@ -388,10 +388,10 @@
 
     & > span {
         text-shadow: 0 0 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-        font-family: 'RobotoLight', sans-serif;
+        font-family: Verdana, sans-serif;
         display: inline-block;
-        letter-spacing: 0.5px;
-        font-weight: 200;
+        text-decoration: none;
+        font-weight: normal;
         color: #f1d4a5;
 
         .font-size(1.2);
