--- a/resources/less/tibia/layout/left-column.less
+++ b/resources/less/tibia/layout/left-column.less
@@ -81,7 +81,7 @@
         width: 124px;
 
         &:hover {
-            background-position-y: -11px;
+            background-position-: 0 -11px;
         }
     }
 
@@ -93,7 +93,7 @@
         width: 124px;
 
         &:hover {
-            background-position-y: -11px;
+            background-position: 0 -11px;
         }
     }
 }
@@ -146,7 +146,7 @@
             .clearfix;
 
             &:hover {
-                background-position-y: -32px;
+                background-position: 0 -32px;
             }
 
             .icon {
