--- a/resources/less/tibia/table.less
+++ b/resources/less/tibia/table.less
@@ -1,4 +1,11 @@
 table {
+    border-collapse: collapse;
+    border-spacing: 0;
+
+    &.full {
+        width: 100%;
+    }
+
     .font-size(1.33);
 
     tr {
