Account character pages

--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -86,6 +86,7 @@
         }
 
         .play-button,
+        .play-button-red,
         .character-buttons {
             display: none;
         }
@@ -96,6 +97,7 @@
             }
 
             .play-button,
+            .play-button-red,
             .character-buttons {
                 display: block;
             }
