--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -410,6 +410,18 @@
     background-image: url('@{image-path}/sbutton_red.gif');
 }
 
+.play-button-red {
+    background: url('@{image-path}/play-not-button.gif') no-repeat top left;
+    text-align: center;
+    line-height: 46px;
+    display: block;
+    border: none;
+    height: 46px;
+    width: 46px;
+    padding: 0;
+    margin: 0;
+}
+
 .play-button {
     background: url('@{image-path}/play-button.gif') no-repeat top left;
     text-align: center;
